# langchain-cookiecutter

./: .gitignore  LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/app/: config.py  main.py
{{cookiecutter.project_slug}}/app/chain/: llm_chain.py
{{cookiecutter.project_slug}}/app/embeddings/: embedding_utils.py
{{cookiecutter.project_slug}}/app/vectors/: store.py
